[package]
name = "tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
shuttle-actix-web = "0.27.0"
shuttle-runtime = "0.27.0"
shuttle-secrets = "0.27.0"
tokio = "1.26.0"
serde = "1.0.136"
chrono = "0.4.31"
futures = "0.3"
anyhow = "1.0.75"
log = "0.4.20"
env_logger = "0.10.0"

[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["async-std-runtime"]
